more bug fixes